fix align svg inside button

--- a/src/Button/Button.scss
+++ b/src/Button/Button.scss
@@ -249,6 +249,7 @@
 
   svg {
     fill: currentColor;
+    vertical-align: top;
   }
 }
 
